--- a/ports/win32/msvc/lwIP.vcxproj.filters
+++ b/ports/win32/msvc/lwIP.vcxproj.filters
@@ -222,6 +222,9 @@
     <ClCompile Include="$(LWIP_DIR)\src\netif\ethernetif.c">
       <Filter>src\netif</Filter>
     </ClCompile>
+    <ClCompile Include="$(LWIP_DIR)\src\netif\lowpan6.c">
+      <Filter>src\netif</Filter>
+    </ClCompile>
     <ClCompile Include="$(LWIP_DIR)\src\netif\slipif.c">
       <Filter>src\netif</Filter>
     </ClCompile>
@@ -516,6 +519,12 @@
       <Filter>src\include\lwip</Filter>
     </ClInclude>
     <ClInclude Include="$(LWIP_DIR)\src\include\netif\etharp.h">
+      <Filter>src\include\netif</Filter>
+    </ClInclude>
+    <ClInclude Include="$(LWIP_DIR)\src\include\netif\lowpan6.h">
+      <Filter>src\include\netif</Filter>
+    </ClInclude>
+    <ClInclude Include="$(LWIP_DIR)\src\include\netif\lowpan6_opts.h">
       <Filter>src\include\netif</Filter>
     </ClInclude>
     <ClInclude Include="$(LWIP_DIR)\src\include\netif\slipif.h">
