added ethernet.h/.c to win32 project, adapted pcapif.c to the changes

--- a/ports/win32/msvc/lwIP.vcxproj
+++ b/ports/win32/msvc/lwIP.vcxproj
@@ -273,6 +273,7 @@
     <ClCompile Include="$(LWIP_DIR)\src\core\ipv6\mld6.c" />
     <ClCompile Include="$(LWIP_DIR)\src\core\ipv6\nd6.c" />
     <ClCompile Include="$(LWIP_DIR)\src\netif\etharp.c" />
+    <ClCompile Include="$(LWIP_DIR)\src\netif\ethernet.c" />
     <ClCompile Include="$(LWIP_DIR)\src\netif\ethernetif.c" />
     <ClCompile Include="$(LWIP_DIR)\src\netif\lowpan6.c" />
     <ClCompile Include="$(LWIP_DIR)\src\netif\slipif.c" />
@@ -385,6 +386,7 @@
     <ClInclude Include="$(LWIP_DIR)\src\include\lwip\timers.h" />
     <ClInclude Include="$(LWIP_DIR)\src\include\lwip\udp.h" />
     <ClInclude Include="$(LWIP_DIR)\src\include\netif\etharp.h" />
+    <ClInclude Include="$(LWIP_DIR)\src\include\netif\ethernet.h" />
     <ClInclude Include="$(LWIP_DIR)\src\include\netif\lowpan6.h" />
     <ClInclude Include="$(LWIP_DIR)\src\include\netif\lowpan6_opts.h" />
     <ClInclude Include="$(LWIP_DIR)\src\include\netif\slipif.h" />
