Adapt MSVC project to new file ip.c

--- a/ports/win32/msvc/lwIP.vcxproj
+++ b/ports/win32/msvc/lwIP.vcxproj
@@ -325,6 +325,7 @@
     <ClCompile Include="$(LWIP_DIR)\src\apps\snmp\snmp_table.c" />
     <ClCompile Include="$(LWIP_DIR)\src\apps\snmp\snmp_threadsync.c" />
     <ClCompile Include="$(LWIP_DIR)\src\apps\snmp\snmp_traps.c" />
+    <ClCompile Include="$(LWIP_DIR)\src\core\ip.c" />
     <ClCompile Include="..\sio.c" />
     <ClCompile Include="..\sys_arch.c" />
   </ItemGroup>
