Make unit tests compile again
Add new ip.c and ethernet.c files
Move dhcp.c to ipv4 section

--- a/ports/unix/check/Makefile
+++ b/ports/unix/check/Makefile
@@ -42,11 +42,13 @@ COREFILES=$(LWIPDIR)/core/mem.c $(LWIPDIR)/core/memp.c $(LWIPDIR)/core/netif.c \
 	$(LWIPDIR)/core/pbuf.c $(LWIPDIR)/core/raw.c \
 	$(LWIPDIR)/core/stats.c $(LWIPDIR)/core/sys.c \
 	$(LWIPDIR)/core/tcp.c $(LWIPDIR)/core/tcp_in.c \
-	$(LWIPDIR)/core/tcp_out.c $(LWIPDIR)/core/udp.c $(LWIPDIR)/core/ipv4/dhcp.c \
+	$(LWIPDIR)/core/tcp_out.c $(LWIPDIR)/core/udp.c $(LWIPDIR)/core/ip.c \
 	$(LWIPDIR)/core/init.c $(LWIPDIR)/core/timers.c $(LWIPDIR)/core/def.c \
-	$(LWIPDIR)/core/inet_chksum.c $(LWIPDIR)/netif/etharp.c
+	$(LWIPDIR)/core/inet_chksum.c $(LWIPDIR)/netif/etharp.c \
+	$(LWIPDIR)/netif/ethernet.c
 CORE4FILES=$(LWIPDIR)/core/ipv4/icmp.c $(LWIPDIR)/core/ipv4/ip4.c \
-	$(LWIPDIR)/core/ipv4/ip4_addr.c $(LWIPDIR)/core/ipv4/ip_frag.c 
+	$(LWIPDIR)/core/ipv4/ip4_addr.c $(LWIPDIR)/core/ipv4/ip_frag.c \
+	$(LWIPDIR)/core/ipv4/dhcp.c
 
 ARCHFILES=$(wildcard $(LWIPARCH)/*.c)
 
