--- a/ports/win32/msvc/lwIP.vcxproj.filters
+++ b/ports/win32/msvc/lwIP.vcxproj.filters
@@ -102,9 +102,6 @@
     <ClCompile Include="$(LWIP_DIR)\src\api\netifapi.c">
       <Filter>src\api</Filter>
     </ClCompile>
-    <ClCompile Include="$(LWIP_DIR)\src\api\pppapi.c">
-      <Filter>src\api</Filter>
-    </ClCompile>
     <ClCompile Include="$(LWIP_DIR)\src\api\sockets.c">
       <Filter>src\api</Filter>
     </ClCompile>
@@ -393,6 +390,9 @@
     <ClCompile Include="$(LWIP_DIR)\src\apps\snmp\snmpv3.c">
       <Filter>src\apps\snmp</Filter>
     </ClCompile>
+    <ClCompile Include="$(LWIP_DIR)\src\netif\ppp\pppapi.c">
+      <Filter>src\netif\ppp</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(LWIP_DIR)\src\include\lwip\apps\lwiperf.h">
@@ -513,9 +513,6 @@
       <Filter>src\include\lwip</Filter>
     </ClInclude>
     <ClInclude Include="$(LWIP_DIR)\src\include\lwip\pbuf.h">
-      <Filter>src\include\lwip</Filter>
-    </ClInclude>
-    <ClInclude Include="$(LWIP_DIR)\src\include\lwip\pppapi.h">
       <Filter>src\include\lwip</Filter>
     </ClInclude>
     <ClInclude Include="$(LWIP_DIR)\src\include\lwip\raw.h">
@@ -721,6 +718,9 @@
     </ClInclude>
     <ClInclude Include="$(LWIP_DIR)\src\apps\snmp\snmpv3.h">
       <Filter>src\apps\snmp</Filter>
+    </ClInclude>
+    <ClInclude Include="$(LWIP_DIR)\src\include\netif\ppp\pppapi.h">
+      <Filter>src\include\netif\ppp</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
