added ppp_opts.h to VS project

--- a/ports/win32/msvc/lwIP.vcxproj.filters
+++ b/ports/win32/msvc/lwIP.vcxproj.filters
@@ -605,6 +605,9 @@
     <ClInclude Include="$(LWIP_DIR)\src\include\netif\ppp\ppp_impl.h">
       <Filter>src\include\netif\ppp</Filter>
     </ClInclude>
+    <ClInclude Include="$(LWIP_DIR)\src\include\netif\ppp\ppp_opts.h">
+      <Filter>src\include\netif\ppp</Filter>
+    </ClInclude>
     <ClInclude Include="$(LWIP_DIR)\src\include\netif\ppp\pppcrypt.h">
       <Filter>src\include\netif\ppp</Filter>
     </ClInclude>
