--- a/ports/win32/msvc/lwIP.vcxproj
+++ b/ports/win32/msvc/lwIP.vcxproj
@@ -413,6 +413,7 @@
     <ClInclude Include="$(LWIP_DIR)\src\include\netif\ppp\mppe.h" />
     <ClInclude Include="$(LWIP_DIR)\src\include\netif\ppp\ppp.h" />
     <ClInclude Include="$(LWIP_DIR)\src\include\netif\ppp\ppp_impl.h" />
+    <ClInclude Include="$(LWIP_DIR)\src\include\netif\ppp\ppp_opts.h" />
     <ClInclude Include="$(LWIP_DIR)\src\include\netif\ppp\pppcrypt.h" />
     <ClInclude Include="$(LWIP_DIR)\src\include\netif\ppp\pppdebug.h" />
     <ClInclude Include="$(LWIP_DIR)\src\include\netif\ppp\pppoe.h" />
