--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.so
 *.a
 .depend
+/ports/unix/fuzz/output
 /ports/unix/fuzz/lwip_fuzz
 /ports/unix/proj/unixsim/simhost
 /ports/unix/proj/unixsim/simrouter
