Move unix port Common.mk to a better place

--- a/ports/unix/check/Makefile
+++ b/ports/unix/check/Makefile
@@ -33,7 +33,7 @@ all compile: lwip_unittests
 .PHONY: all clean check
 
 CONTRIBDIR=../../..
-include ../proj/Common.mk
+include ../Common.mk
 
 LDFLAGS:=$(LDFLAGS) -lcheck -lm -lsubunit
 CFLAGS:=$(CFLAGS) -DLWIP_NOASSERT_ON_ERROR -I/usr/include/check -I$(LWIPDIR)/../test/unit
