--- a/ports/unix/proj/minimal/Makefile
+++ b/ports/unix/proj/minimal/Makefile
@@ -32,7 +32,7 @@
 all ipv4 compile: echop
 .PHONY: all
 
-include ../Common.mk
+include ../../Common.mk
 
 clean:
 	rm -f *.o $(LWIPLIBCOMMON) $(APPLIB) echop .depend* *.core core
