--- a/ports/win32/msvc/lwIP.vcxproj
+++ b/ports/win32/msvc/lwIP.vcxproj
@@ -334,6 +334,7 @@
     <ClCompile Include="$(LWIP_DIR)\src\netif\ppp\pppapi.c" />
     <ClCompile Include="$(LWIP_DIR)\src\core\ipv4\ip4_frag.c" />
     <ClCompile Include="$(LWIP_DIR)\src\core\timeouts.c" />
+    <ClCompile Include="$(LWIP_DIR)\src\apps\mdns\mdns.c" />
     <ClCompile Include="..\sio.c" />
     <ClCompile Include="..\sys_arch.c" />
   </ItemGroup>
@@ -446,6 +447,13 @@
     <ClInclude Include="$(LWIP_DIR)\src\include\lwip\etharp.h" />
     <ClInclude Include="$(LWIP_DIR)\src\include\lwip\ip4_frag.h" />
     <ClInclude Include="$(LWIP_DIR)\src\include\lwip\timeouts.h" />
+    <ClInclude Include="$(LWIP_DIR)\src\include\lwip\apps\mdns.h" />
+    <ClInclude Include="$(LWIP_DIR)\src\include\lwip\apps\mdns_opts.h" />
+    <ClInclude Include="$(LWIP_DIR)\src\include\lwip\prot\autoip.h" />
+    <ClInclude Include="$(LWIP_DIR)\src\include\lwip\prot\dhcp.h" />
+    <ClInclude Include="$(LWIP_DIR)\src\include\lwip\prot\dns.h" />
+    <ClInclude Include="$(LWIP_DIR)\src\include\lwip\prot\ip.h" />
+    <ClInclude Include="$(LWIP_DIR)\src\include\lwip\prot\ip4.h" />
     <ClInclude Include="..\include\arch\bpstruct.h" />
     <ClInclude Include="..\include\arch\cc.h" />
     <ClInclude Include="..\include\arch\epstruct.h" />
