--- a/ports/win32/msvc/lwip_unittests.vcxproj.filters
+++ b/ports/win32/msvc/lwip_unittests.vcxproj.filters
@@ -16,6 +16,9 @@
     <Filter Include="dhcp">
       <UniqueIdentifier>{a6b60d4e-4b81-44f2-9408-2e45cc769391}</UniqueIdentifier>
     </Filter>
+    <Filter Include="mdns">
+      <UniqueIdentifier>{d454902e-ce5b-48ae-a690-e6490bdbbf17}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\lwip\test\unit\core\test_mem.c">
@@ -43,6 +46,9 @@
       <Filter>dhcp</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\lwip\test\unit\lwip_unittests.c" />
+    <ClCompile Include="..\..\..\..\lwip\test\unit\mdns\test_mdns.c">
+      <Filter>mdns</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\lwip\test\unit\core\test_mem.h">
@@ -71,5 +77,8 @@
     </ClInclude>
     <ClInclude Include="..\..\..\..\lwip\test\unit\lwip_check.h" />
     <ClInclude Include="..\..\..\..\lwip\test\unit\lwipopts.h" />
+    <ClInclude Include="..\..\..\..\lwip\test\unit\mdns\test_mdns.h">
+      <Filter>mdns</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
